added some more files (forget to add them on the last commit)

--- a/.weechat/irc.conf
+++ b/.weechat/irc.conf
@@ -185,7 +185,7 @@ freenode.local_hostname
 freenode.usermode
 freenode.command
 freenode.command_delay
-freenode.autojoin = "#fedora,#i3,#vim,#neovim,#systemd,#linux,#weechat"
+freenode.autojoin = ""
 freenode.autorejoin
 freenode.autorejoin_delay
 freenode.connection_timeout
